corpus/c/type/case-01/snapshots/gcc15/render.verbose.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: type or overload mismatch
--> src/main.c:5:22
help: compare the expected type and actual argument at the call site
why: passing argument 1 of 'takes_int' makes integer from pointer without a cast
| src/main.c:5:22
|     return takes_int(value);
|                      ^
because: expected 'int' but argument is of type 'const char *'
debug: rule_id=rule.family.type_overload.structured_or_message
debug: matched_conditions=message_contains=passing argument, phase=semantic
error: type or overload mismatch
--> src/main.c:5:22
help: compare the expected type and actual argument at the call site
why: src/main.c:5:22: error: passing argument 1 of 'takes_int' makes integer from pointer without a cast [-Wint-conversion]
| src/main.c:5:22
|     return takes_int(value);
|                      ^
raw:
  src/main.c:5:22: error: passing argument 1 of 'takes_int' makes integer from pointer without a cast [-Wint-conversion]
debug: rule_id=rule.family.type_overload.structured_or_message
debug: matched_conditions=message_contains=passing argument, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output